[package]
name = "yisangsay"
version = "0.1.1"
edition = "2021"
description = "Yisangsay is a CLI program like cowsay, but instead of a talking cow, it's Yi Sang from Limbus Company!"
license = "GPL-3.0"
repository = "https://github.com/VectorSophie/yisangsay-rs"
authors = ["VectorSophie <jay7math@gmail.com>"]

[dependencies]
lazy_static = "1.4"
clap = {version = "4.5", features = ["derive"]}
crossterm = "0.29"
rand = "0.9"
tokio = { version = "1.0", features = ["full"] }

[package.metadata.deb]
maintainer = "VectorSophie <jay7math@gmail.com>"
copyright = "2024, VectorSophie <jay7math@gmail.com>"
extended-description = """\
Yisangsay is a fun CLI tool inspired by cowsay. \
Instead of a cow, Yi Sang from Limbus Company delivers your messages \
in ASCII art form with animations."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/yisangsay", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/yisangsay/", "644"],
]
